--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700|Sacramento" rel="stylesheet">
-    <!-- <link rel="shortcut icon" href="./flower-icon.png"> -->
+    <link href="https://fonts.googleapis.com/css?family=Parisienne|Raleway:300,400,700" rel="stylesheet">    <!-- <link rel="shortcut icon" href="./flower-icon.png"> -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/flower-icon.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
